--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 20px;
+      gap: 15px;
       background: linear-gradient(#ff3333, #cc0000);
       color: #fff;
       padding: 20px 30px;
@@ -39,7 +39,9 @@
       transform: scale(1.06);
       box-shadow: 0 18px 50px rgba(255,0,0,1);
     }
-    .premium-amazon-btn img { height: 55px; }
+    .premium-amazon-btn .pointer { font-size: 40px; animation: pointBounce 1s infinite; }
+    @keyframes pointBounce { 0%, 100% { transform: translateX(0); } 50% { transform: translateX(8px); } }
+    .premium-amazon-btn img { height: 60px; width: 110px;}
     .premium-amazon-btn .text .main { font-size: 35px; display: block; }
     .premium-amazon-btn .text .sub { font-size: 20px; display: block; }
 
@@ -152,10 +154,12 @@
   </div>
   
   <a href="https://www.amazon.in/YOUR-PRODUCT-LINK" target="_blank" class="premium-amazon-btn" id="buyBtn">
+    <span class="pointer">👉</span>
     <img src="Amazon_logo.svg" alt="Amazon Logo">
     <div class="text">
       <span class="main">55% OFF</span>
     </div>
+    <span class="pointer">👈</span>
   </a>
 
   <!-- SALES PROOF -->
@@ -177,10 +181,12 @@
   </ul>
 
   <a href="https://www.amazon.in/YOUR-PRODUCT-LINK" target="_blank" class="premium-amazon-btn" id="buyBtn2">
+    <span class="pointer">👉</span>
     <img src="Amazon_logo.svg" alt="Amazon Logo">
     <div class="text">
       <span class="main">50% OFF</span>
     </div>
+    <span class="pointer">👈</span>
   </a>
 
   <!-- BEFORE/AFTER -->
@@ -300,10 +306,12 @@
   </div>
 
   <a href="https://www.amazon.in/YOUR-PRODUCT-LINK" target="_blank" class="premium-amazon-btn" id="buyBtn3">
+    <span class="pointer">👉</span>
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo">
     <div class="text">
       <span class="main">55% OFF</span>
     </div>
+    <span class="pointer">👈</span>
   </a>
 
 </div>
@@ -311,10 +319,12 @@
 <!-- STICKY CTA -->
 <div class="sticky">
   <a href="https://www.amazon.in/YOUR-PRODUCT-LINK" target="_blank" class="premium-amazon-btn" id="stickyBtn">
+    <span class="pointer">👉</span>
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo">
     <div class="text">
       <span class="main">55% OFF</span>
     </div>
+    <span class="pointer">👈</span>
   </a>
 </div>
 
